--- a/kairos-ui/kairos-ui/src/app/entities/menu/menu-list/menu-list.component.html
+++ b/kairos-ui/kairos-ui/src/app/entities/menu/menu-list/menu-list.component.html
@@ -3,6 +3,7 @@
 <div class="mdl-layout__content ">
   <div class="mdl-card__title mdl-card--border">
     <h2 class="mdl-card__title-text">{{ title }}</h2>
+    <a mat-raised-button class="card-header-button" routerLink="../menu-form"><mat-icon>add</mat-icon>CrÃ©er</a>
   </div>
   <div class="list-card-body">
     <table class="mdl-data-table mdl-js-data-table">
@@ -52,7 +53,5 @@
     <br />
     <span class="paginationStats">Pages {{ pager.startPage }}-{{ this.pager.endPage }} sur {{ pager.totalPages }}</span>
   </div>
-  <div class="mdl-card__menu">
-    <a mat-raised-button class="card-header-button" routerLink="../menu-form"><mat-icon>add</mat-icon>Créer</a>
-  </div>
+
 </div>
