--- a/kairos-ui/kairos-ui/src/app/login/login.component.html
+++ b/kairos-ui/kairos-ui/src/app/login/login.component.html
@@ -1,3 +1,28 @@
-<p>
-  login works!
-</p>
+<div class="material-card-wide mdl-card mdl-shadow--2dp form-card">
+  <div class="mdl-card__title mdl-card--border">
+    <h2 class="mdl-card__title-text">Page de Connection</h2>
+  </div>
+  <form [formGroup]="form" novalidate (ngSubmit)="connect()">
+    <div class="add-edit-form">
+      <mat-grid-list cols="1" rowHeight="70px">
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-form-field class="form-full-width">
+            <input matInput placeholder="Utilisateur" required formControlName="user">
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-form-field class="form-full-width">
+            <input matInput placeholder="Mot de passe" required formControlName="password">
+          </mat-form-field>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+      <div class="card-footer-button form-button">
+        <button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--primary">
+          Se connecter
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
