--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -11,6 +11,9 @@
       <nav class="mdl-navigation mdl-layout--large-screen-only">
         <a routerLink="about" class="mdl-navigation__link" href="">A propos</a>
       </nav>
+      <nav class="mdl-navigation mdl-layout--large-screen-only">
+        <a routerLink="deconnect" class="mdl-navigation__link" href="">Déconnexion</a>
+      </nav>
     </div>
   </header>
 
