--- a/kairos-ui/kairos-ui/src/app/login/login.component.html
+++ b/kairos-ui/kairos-ui/src/app/login/login.component.html
@@ -16,6 +16,18 @@
             <input matInput placeholder="Mot de passe" required formControlName="password">
           </mat-form-field>
         </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-form-field class="form-full-width">
+            <input matInput placeholder="Date début string" required formControlName="datedebut">
+          </mat-form-field>
+        </mat-grid-tile>        
+       <mat-grid-tile [colspan]="1" [rowspan]="1">
+          <mat-form-field class="form-full-width">
+            <input matInput [matDatepicker]="pickerdatedebut" placeholder="Date début"  formControlName="datedebut">
+            <mat-datepicker-toggle matSuffix [for]="pickerdatedebut"></mat-datepicker-toggle>
+            <mat-datepicker #pickerdatedebut [startAt]="03/01/2020"></mat-datepicker>
+			          </mat-form-field>
+        </mat-grid-tile>        
       </mat-grid-list>
     </div>
     <div class="mdl-card__actions mdl-card--border">
