--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
@@ -238,6 +238,7 @@ export class $formComponentName implements OnInit {
   }
 
   update = () => {
+	Object.assign(this.$LCentityName,this.form.value);
     this.${_entityService}.update(this.$LCentityName).subscribe(
       result => this._notificationService.success('Success', '${entity.name} edited successfuly'),
       error => {
