--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -9,15 +9,19 @@
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
       <nav class="mdl-navigation mdl-layout--large-screen-only mdl-navigation__link">
+        <span *ngIf="currentConsultant">
           Consultant
+        </span>
       </nav>
       <nav class="mdl-navigation mdl-layout--large-screen-only">
       <form [formGroup]="form" novalidate>
+      <span *ngIf="currentConsultant">
       <mat-form-field>
-          <mat-select>
+          <mat-select [(value)]="currentConsultant.consultantid">
               <mat-option *ngFor="let c of listOfConsultants" [value]="c.consultantid">{{c.nom}} {{c.prenom}}</mat-option>          
           </mat-select>
-      </mat-form-field>     
+      </mat-form-field>
+      </span>
       </form>
       </nav>
       <nav class="mdl-navigation mdl-layout--large-screen-only">
