--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/test_jdbctool.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/test_jdbctool.vm
@@ -3,6 +3,8 @@ $jdbcTool.setAllFromConfig($project.specificVariables)##
 $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
 #set( $extAttributes=$jdbcTool.getExtAttributes($entity))
 ##
+Créer
+
 Entertabs/Leavetabs
 #foreach ( $extattrib in $extAttributes )
 #set ($attrib = $entity.attributes.get($extattrib.index))
