genartion de entity list avec angular material

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_ts.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_ts.vm
@@ -42,6 +42,13 @@ export class $listComponentName implements OnInit, OnChanges {
 
   private $LCentityName: $entity.name;
 
+#set ($displayedColumns = "")
+#foreach ( $attrib in $entity.attributes)
+#set ($displayedColumns = "${displayedColumns}'${attrib.name}',")
+#end
+#set ($displayedColumns = "${displayedColumns}'_delete'")
+  displayedColumns: string[] = [${displayedColumns}];
+
   constructor(
     private $_entityService: $baseServiceName,
     private _router: Router,
