--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_html.vm
@@ -10,7 +10,7 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
 <mat-card>
   	<mat-card-header>
       	<mat-card-title>
-    		<h2 class="mdl-card__title-text">{{ title }}</h2>
+    		{{ title }} <a mat-raised-button [routerLink]="['/${LCentityName}-list']">Liste de ${entity.name}</a>
       	</mat-card-title>
   	</mat-card-header>
  	<mat-card-content class="register-container">
@@ -138,20 +138,17 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
 #end
     </div>
     <mat-card-actions>
-        <button mat-raised-button type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button" (click)="initForm()">
+        <button mat-raised-button color="primary" type="button" (click)="initForm()">
           Vider
         </button>
-        <button mat-raised-button type="submit" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--primary" [disabled]="!form.valid">
+        <button mat-raised-button color="primary"  type="submit" [disabled]="!form.valid">
           Sauvegarder
         </button>
 #set ($entityNameprefix = "!${LCentityName}?.")
-        <button mat-raised-button type="button" [disabled]="${entity.keyAttributesNamesAsString(' && ', $entityNameprefix, '')}" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--accent" (click)="deleteConfirmation()">
+        <button mat-raised-button type="button" color="primary"  [disabled]="${entity.keyAttributesNamesAsString(' && ', $entityNameprefix, '')}" (click)="deleteConfirmation()">
           Supprimer
         </button>
     </mat-card-actions>
   	</form>
   	</mat-card-content>
-  <div class="mdl-card__menu">
-    <a mat-raised-button class="card-header-button" [routerLink]="['/${LCentityName}-list']">${entity.name} list</a>
-  </div>
 </mat-card>
