--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
@@ -9,7 +9,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content class="login-container">
-        <table mat-table [dataSource]="pagedItems" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 #foreach ( $attrib in $entity.attributes)
               <ng-container matColumnDef="${attrib.name}">
                 <th mat-header-cell *matHeaderCellDef>${attrib.name}</th>
@@ -30,27 +30,8 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let $LCentityName; columns: displayedColumns;"  (click)="edit${entity.name}(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')})"></tr>
         </table>
-  <!-- pager -->
-  <div class="mdl-paging" *ngIf="pager.pages && pager.pages.length">
-    <button [disabled]="pager.currentPage === 1"
-      class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
-      (click)="setPage(pager.currentPage - 1)">
-      <i class="material-icons">keyboard_arrow_left</i>
-    </button>
-    <a *ngFor="let page of pager.pages" 
-      [class.selected]="pager.currentPage === page"
-      class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
-      (click)="setPage(page)">
-      {{ page }}
-    </a>
-    <button [disabled]="pager.currentPage === pager.totalPages" 
-      class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon"
-      (click)="setPage(pager.currentPage + 1)">
-      <i class="material-icons">keyboard_arrow_right</i>
-    </button>
-    <br />
-    <span class="paginationStats">Pages {{ pager.startPage }}-{{ this.pager.endPage }} sur {{ pager.totalPages }}</span>
-  </div>
-
+        <div class="footer">
+          <mat-paginator class="paginator--centered" pageSize="10" showFirstLastButtons color="primary" hidePageSize="true" ></mat-paginator>
+        </div>
     </mat-card-content>
  </mat-card>
