--- a/kairos-ui/kairos-ui/src/app/entities/menu/menu-form/menu-form.component.html
+++ b/kairos-ui/kairos-ui/src/app/entities/menu/menu-form/menu-form.component.html
@@ -35,11 +35,11 @@
 			          </mat-form-field>
         </mat-grid-tile>	
        <mat-grid-tile [colspan]="4">
-			Accès URL
+			Accï¿½s URL
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
           <mat-form-field class="form-full-width">
-            <input matInput placeholder="Accès URL"  maxlength="255" formControlName="url">
+            <input matInput placeholder="Accï¿½s URL"  maxlength="255" formControlName="url">
 			          </mat-form-field>
         </mat-grid-tile>	
        <mat-grid-tile [colspan]="4">
