--- a/kairos-ui/kairos-ui/src/app/login/login.component.html
+++ b/kairos-ui/kairos-ui/src/app/login/login.component.html
@@ -6,6 +6,7 @@
         <mat-card-subtitle>{{message}}</mat-card-subtitle>
   	</mat-card-header>
     <mat-card-content class="login-container">
+          <mat-divider></mat-divider>
           <mat-grid-list cols="1" rowHeight="70px">
             <mat-grid-tile [colspan]="1" [rowspan]="1">
               <mat-form-field class="form-full-width">
@@ -14,7 +15,7 @@
             </mat-grid-tile>
             <mat-grid-tile [colspan]="1" [rowspan]="1">
               <mat-form-field class="form-full-width">
-                <input matInput placeholder="Mot de passe" required formControlName="password">
+                <input matInput placeholder="Mot de passe" type="password" required formControlName="password">
               </mat-form-field>
             </mat-grid-tile>
           </mat-grid-list>
