--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_css.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_css.vm
@@ -5,6 +5,13 @@
   width: 100%;
 }
  
-.form-full-width {
-  width: 100%;
+.mat-form-field {
+	display: flex;
+  	flex-direction: column;
+}
+
+.field_left {
+	width: 100%; 
+    display: flex; 
+	align-items: flex-start;
 }
