--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_html.vm
@@ -13,7 +13,7 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
     		{{ title }} <a mat-raised-button [routerLink]="['/${LCentityName}-list']">Liste de ${entity.name}</a>
       	</mat-card-title>
   	</mat-card-header>
- 	<mat-card-content class="register-container">
+ 	<mat-card-content >
   	<form [formGroup]="form" novalidate (ngSubmit)="save()">
     <div class="add-edit-form">
 #foreach ( $extattrib in $extAttributes)
@@ -30,23 +30,26 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
       <mat-tab label="${extattrib.ext2}">
 #end
 #if ($extattrib.enterbloc)
-      <mat-grid-list cols="10" rowHeight="70px">
+      <mat-grid-list cols="20" rowHeight="70px">
 #end
 #if ($attrib.isKeyElement() && !$attrib.isFK())
         <mat-grid-tile [colspan]="4">
 			${extattrib.ext1}
         </mat-grid-tile>
-        <mat-grid-tile [colspan]="6">
-          <mat-form-field class="form-full-width">
+        <mat-grid-tile [colspan]="6" >
+		<div style="width: 100%; display: flex; align-items: flex-start;">
+          <mat-form-field style="width:${attrib.databaseSize}0px !important" >
             <input matInput placeholder="${extattrib.ext1}#if($attrib.isAutoIncremented())(disabled)#else #end" required maxlength="${attrib.databaseSize}" formControlName="${attrib.name}">
           </mat-form-field>
+		</div>
         </mat-grid-tile>
 #elseif ($attrib.isDateType())
         <mat-grid-tile [colspan]="4">
 			${extattrib.ext1}
         </mat-grid-tile>
         <mat-grid-tile [colspan]="6">
-          <mat-form-field class="form-full-width">
+		  <div style="width: 100%; display: flex; align-items: flex-start;">
+          <mat-form-field style="width:${attrib.databaseSize}0px !important">
             <input matInput [matDatepicker]="picker${attrib.name}" placeholder="${extattrib.ext1}" ${requiredmode} formControlName="${attrib.name}">
             <mat-datepicker-toggle matSuffix [for]="picker${attrib.name}"></mat-datepicker-toggle>
             <mat-datepicker ${SHARP}picker${attrib.name}></mat-datepicker>
@@ -56,6 +59,7 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
             </mat-error>
 			#end
           </mat-form-field>
+		  </div>
         </mat-grid-tile>
 #elseif ( $attrib.isFK() && $attrib.isKeyElement())
 #set($referencedEntity = $fn.uncapitalize($attrib.referencedEntityName))
@@ -116,7 +120,8 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
 			${extattrib.ext1}
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
-          <mat-form-field class="form-full-width">
+		  <div style="width: 100%; display: flex; align-items: flex-start;">
+          <mat-form-field style="width:${attrib.databaseSize}0px !important">
             <input matInput placeholder="${extattrib.ext1}" ${requiredmode} maxlength="${attrib.databaseSize}" formControlName="${attrib.name}">
 			#if ($attrib.isDatabaseNotNull())
             <mat-error *ngIf="!form.controls.${attrib.name}.valid">
@@ -124,8 +129,16 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
             </mat-error>
 			#end
           </mat-form-field>
+		  </div>
         </mat-grid-tile>	
 #end
+#if ($extattrib.ext5 == "o" )
+#else
+#if (!$extattrib.leavebloc)
+        <mat-grid-tile [colspan]="10">
+		</mat-grid-tile>
+#end
+#end 
 #if ($extattrib.leavebloc)
       </mat-grid-list>
 #end
