--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
@@ -27,8 +27,8 @@
                 </td>
               </ng-container>              
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let $LCentityName; columns: displayedColumns;"  (click)="edit${entity.name}(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')})"></tr>
+              <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
+              <tr mat-row *matRowDef="let $LCentityName; columns: getDisplayedColumns();"  (click)="edit${entity.name}(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')})"></tr>
         </table>
         <div class="footer">
           <mat-paginator class="paginator--centered" pageSize="10" showFirstLastButtons color="primary" hidePageSize="true" ></mat-paginator>
