--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
@@ -21,7 +21,7 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
               <ng-container matColumnDef="${attrib.name}">
                 <th mat-header-cell *matHeaderCellDef>${extattrib.ext1}</th>
 #if ( $attrib.isDateType() )
-                <td mat-cell *matCellDef="let element"> {{element.${attrib.name}}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.${attrib.name} | date:'dd/MM/yyyy'}} </td>
 #else
 				<td mat-cell *matCellDef="let element"> {{element.${attrib.name}}} </td>
 #end
