--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_html.vm
@@ -15,28 +15,28 @@ $jdbcTool.setOrderby("ORDER BY ext2, ext4, ext3")##
         </mat-card-title>
     </mat-card-header>
     <mat-card-content class="login-container">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 #foreach ( $extattrib in $extAttributes)
 #set ($attrib = $entity.attributes.get($extattrib.index))
               <ng-container matColumnDef="${attrib.name}">
-                <th mat-header-cell *matHeaderCellDef>${extattrib.ext1}</th>
+                <mat-header-cell *matHeaderCellDef>${extattrib.ext1}</mat-header-cell>
 #if ( $attrib.isDateType() )
-                <td mat-cell *matCellDef="let element"> {{element.${attrib.name} | date:'dd/MM/yyyy'}} </td>
+                <mat-cell *matCellDef="let element"> {{element.${attrib.name} | date:'dd/MM/yyyy'}} </mat-cell>
 #else
-				<td mat-cell *matCellDef="let element"> {{element.${attrib.name}}} </td>
+				<mat-cell *matCellDef="let element"> {{element.${attrib.name}}} </mat-cell>
 #end
               </ng-container>
 #end
               <ng-container matColumnDef="_delete">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let $LCentityName" (click)="deleteConfirmation(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')}); ${DOLLAR}event.stopPropagation();"> 
+                <mat-header-cell *matHeaderCellDef></mat-header-cell>
+                <mat-cell *matCellDef="let $LCentityName" (click)="deleteConfirmation(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')}); ${DOLLAR}event.stopPropagation();"> 
                   <i class="material-icons delete-data-icon">delete_forever</i>
-                </td>
+                </mat-cell>
               </ng-container>              
 
-              <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
-              <tr mat-row *matRowDef="let $LCentityName; columns: getDisplayedColumns();"  (click)="edit${entity.name}(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')})"></tr>
-        </table>
+              <mat-header-row *matHeaderRowDef="getDisplayedColumns()"></mat-header-row>
+              <mat-row *matRowDef="let $LCentityName; columns: getDisplayedColumns();"  (click)="edit${entity.name}(${entity.keyAttributesNamesAsString(', ', $idsPrefix, '')})"></mat-row>
+        </mat-table>
         <div class="footer">
           <mat-paginator class="paginator--centered" pageSize="10" showFirstLastButtons color="primary" hidePageSize="true" ></mat-paginator>
         </div>
