--- a/kairos-ui/kairos-ui/src/app/entities/consultant/consultant-form/consultant-form.component.html
+++ b/kairos-ui/kairos-ui/src/app/entities/consultant/consultant-form/consultant-form.component.html
@@ -41,7 +41,7 @@
 		  </div>
         </mat-grid-tile>	
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Prénom</div>
+			<div class="label_right">Prï¿½nom</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -119,7 +119,7 @@
 		  </div>
         </mat-grid-tile>	
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Téléphone Portable</div>
+			<div class="label_right">Tï¿½lï¿½phone Portable</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -131,7 +131,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Téléphone Travail</div>
+			<div class="label_right">Tï¿½lï¿½phone Travail</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -143,7 +143,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Téléphone Domicile</div>
+			<div class="label_right">Tï¿½lï¿½phone Domicile</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -167,7 +167,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
         <mat-grid-tile [colspan]="4">
-			<div class="label_right">Date Entrée</div>
+			<div class="label_right">Date Entrï¿½e</div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -226,10 +226,10 @@
         </mat-grid-tile>	
       </mat-grid-list>
       </mat-tab>
-      <mat-tab label="Véhicules">
+      <mat-tab label="Vï¿½hicules">
       <mat-grid-list cols="20" rowHeight="70px">
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">N° permis de conduire</div>
+			<div class="label_right">Nï¿½ permis de conduire</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -241,7 +241,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Taux km siège</div>
+			<div class="label_right">Taux km siï¿½ge</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -252,7 +252,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Nb km siège</div>
+			<div class="label_right">Nb km siï¿½ge</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -288,7 +288,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Modèle</div>
+			<div class="label_right">Modï¿½le</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -324,7 +324,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Modèle</div>
+			<div class="label_right">Modï¿½le</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -348,7 +348,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Révision</div>
+			<div class="label_right">Rï¿½vision</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -360,7 +360,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Taux spécifique</div>
+			<div class="label_right">Taux spï¿½cifique</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -374,7 +374,7 @@
       <mat-tab label="Communication">
       <mat-grid-list cols="20" rowHeight="70px">
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Montant Tél max</div>
+			<div class="label_right">Montant Tï¿½l max</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -398,7 +398,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Modèle</div>
+			<div class="label_right">Modï¿½le</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -472,7 +472,7 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
         <mat-grid-tile [colspan]="4">
-			<div class="label_right">Echéance contrat</div>
+			<div class="label_right">Echï¿½ance contrat</div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
@@ -500,12 +500,14 @@
         <mat-grid-tile [colspan]="10">
 		</mat-grid-tile>
        <mat-grid-tile [colspan]="4">
-			<div class="label_right">Société</div>
+			<div class="label_right">Sociï¿½tï¿½</div>
        </mat-grid-tile>
        <mat-grid-tile [colspan]="6">
 		  <div style="width: 100%; display: flex; align-items: flex-start;">
-          <mat-form-field style="width:20px !important">
-            <input matInput  maxlength="2" formControlName="societe" style="">
+          <mat-form-field style="width:400px !important">
+			  <select matNativeControl maxlength="2" formControlName="societe">
+			  	<option *ngFor="let lov of listOfSOCIETE" value="{{lov.codeelement}}">{{lov.nomelement}}</option>
+			  </select>            
           </mat-form-field>
 		  </div>
         </mat-grid-tile>	
